# vr_player_tizen

./: pubspec.yaml
android/: build.gradle
eample_1/: .gitignore  README.md  pubspec.yaml
eample_1/lib/: main.dart
eample_1/test/: widget_test.dart
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example_android_tv/: pubspec.yaml
example_android_tv/android/app/: build.gradle.kts
example_android_tv/ios/Runner/: Info.plist
example_android_tv/ios/Runner.xcodeproj/: project.pbxproj
example_android_tv/test/: widget_test.dart
example_tizen_tv/: README.md  pubspec.yaml
example_tizen_tv/android/app/: build.gradle.kts
example_tizen_tv/ios/Runner/: Info.plist
example_tizen_tv/lib/: main.dart
example_tizen_tv/tizen/: tizen-manifest.xml
ios/: vr_player.podspec
ios/Classes/: PlayerFlutterView.swift  SwiftVideo360kalturaPlugin.swift  VRPlayerPlugin.h  VRPlayerPlugin.m
ios/PlayKitProvidersCustomized/Base/: FormatsHelper.swift  RequestExtension.swift
ios/PlayKitProvidersCustomized/OTT/Model/: OTTAccessControlMessage.swift  OTTBooleanValue.swift  OTTDrmData.swift  OTTError.swift  OTTLiveAsset.swift  OTTMediaAsset.swift  OTTMediaFile.swift  OTTMultilingualStringValue.swift  OTTPlaybackContext.swift  OTTPlaybackSource.swift  (+3 more)
lib/src/: vr_player.dart  vr_player_controller.dart
tizen/: CMakeLists.txt  project_def.prop  vr_player_plugin.cc  vr_player_plugin.h
tizen/inc/: vr_player_plugin.h
tizen/src/: vr_player.cc  vr_player.h  vr_player_plugin.cc  vr_player_view.h
(+37 files in other folders)
